--- a/regform.html
+++ b/regform.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <div class="form-container">
-            <h1>Registration form!!</h1>
+            <h1>Registration form!</h1>
             <form action="submit.html">
                 <input
                     type="text"
